@@ -1,3 +1,9 @@
+TAG: qcreports_db-5-0-0-1
+DATE: 04/05/2012
+STAFF: lec
+CHANGES: 
+1) TR11028/mgd/PRB_StrainByDate.sql
+
 TAG: qcreports_db-4-4-2-15
 DATE: 03/27/2012
 STAFF: lec
